Closed
Bug 793132
Opened 13 years ago
Closed 13 years ago
Certain game benchmark screen is repainted partially
Categories
(Core :: Layout, defect)
Tracking
()
RESOLVED
FIXED
mozilla18
| Tracking | Status | |
|---|---|---|
| firefox18 | - | --- |
People
(Reporter: alice0775, Assigned: mattwoodrow)
References
()
Details
(Keywords: regression)
Attachments
(2 files)
|
7.36 KB,
patch
|
roc
:
review+
|
Details | Diff | Splinter Review |
|
101.58 KB,
application/zip
|
Details |
Build Identifier:
http://hg.mozilla.org/mozilla-central/rev/1e56d3016820
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120920030543
Certain bench game screen is repainted partially.
Steps to reproduce:
1. Open http://www.4gamer.net/specials/enchant/bench/
2. Click "Start"
Actual results:
The game screen is repainted partially
Expected results:
The game screen should be repainted properly(all of the game screen).
Regression range:
Good:
http://hg.mozilla.org/mozilla-central/rev/f7c89de3ab43
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120916030607
Bad:
http://hg.mozilla.org/mozilla-central/rev/b3f462d96fb5
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120916161603
Pushlog:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=f7c89de3ab43&tochange=b3f462d96fb5
Regression range:
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/33087122ace7
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120916022601
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/6ee831a85d12
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120916033402
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=33087122ace7&tochange=6ee831a85d12
Regressed by Bug 788044
Assignee: nobody → matt.woodrow
| Assignee | ||
Comment 1•13 years ago
|
||
The bug here was that we were adjusting all transforms for the change in display lists coordinate system. This moves the adjustment into nsDisplayTransform::GetTransform so that all the other layout callers of GetResultingTransformMatrix don't get changed.
I guess this is one of those cases where it would be nice to have display list coordinates as a different type to layout coords, so that we could statically assert that these don't get mixed up. I've checked all the callers for now, this looks like it should be fine.
Try server push: https://tbpl.mozilla.org/?tree=Try&rev=e501f16dacf6
Attachment #663906 -
Flags: review?(roc)
| Reporter | ||
Updated•13 years ago
|
Attachment #663906 -
Flags: review?(roc) → review+
| Reporter | ||
Comment 2•13 years ago
|
||
Please use this sample until Bug 793578 is fixed.
Open index.html. The HTML5 game benchmark will start automatically.
| Reporter | ||
Comment 3•13 years ago
|
||
(In reply to Matt Woodrow (:mattwoodrow) from comment #1)
> Try server push: https://tbpl.mozilla.org/?tree=Try&rev=e501f16dacf6
I confirmed the tryserver build fixed the problem,
| Assignee | ||
Comment 4•13 years ago
|
||
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla18
Updated•13 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•