Bug 793132 - Make sure that only display lists get the reference frame adjusted transform. r=roc